add sign up page

--- a/simple-project/src/main/resources/i18n/login_en_US.properties
+++ b/simple-project/src/main/resources/i18n/login_en_US.properties
@@ -1,5 +1,6 @@
 login.tip=Please Sign In
-login.username=User Name
+login.userid=User ID
 login.password=Password
 login.remember=Remember Me
 login.btn=Sign In
+login.signup=Sign up!
